--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <ul>
           <li>
             <img
-              src="images/Mark.jpg"
+              src="./images/Mark.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -74,13 +74,18 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/Tom.jpg" alt="Tom Ford" width="264" height="260" />
+            <img
+              src="./images/Tom.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="images/Camila.jpg"
+              src="./images/Camila.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -90,7 +95,7 @@
           </li>
           <li>
             <img
-              src="images/Daniel.jpg"
+              src="./images/Daniel.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
