--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       </address>
     </header>
     <main>
-      <section class="Effective">
+      <section class="effective">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button" class="Order">Order Service</button>
+        <button type="button" class="order">Order Service</button>
       </section>
       <section>
         <h2>Our Features</h2>
@@ -81,10 +81,10 @@
           </li>
         </ul>
       </section>
-      <section class="Our">
+      <section class="our">
         <h2>Our Team</h2>
-        <ul class="Team">
-          <li class="Team-person">
+        <ul class="team">
+          <li class="team-person">
             <img
               src="./images/Mark.jpg"
               alt="Mark Guerrero"
@@ -94,7 +94,7 @@
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li class="Team-person">
+          <li class="team-person">
             <img
               src="./images/Tom.jpg"
               alt="Tom Ford"
@@ -104,7 +104,7 @@
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li class="Team-person">
+          <li class="team-person">
             <img
               src="./images/Camila.jpg"
               alt="Camila Garcia"
@@ -114,7 +114,7 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li class="Team-person">
+          <li class="team-person">
             <img
               src="./images/Daniel.jpg"
               alt="Daniel Wilson"
@@ -126,7 +126,7 @@
           </li>
         </ul>
       </section>
-      <section class="Our">
+      <section class="our">
         <h2>Our Portfolio</h2>
         <ul>
           <li>
@@ -193,9 +193,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html">
-        <span class="footer-blue">Web</span>
-        <span class="footer-white">Studio</span>
+      <a class="logo" href="./index.html">
+        <span class="logo-blue">Web</span>
+        <span class="logo-white">Studio</span>
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
