--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </li>
         </ul>
       </section>
-      <section class="our">
+      <section class="team-section">
         <h2>Our Team</h2>
         <ul class="team">
           <li class="team-person">
